--- a/src/components/ExperienceBar/styles.module.scss
+++ b/src/components/ExperienceBar/styles.module.scss
@@ -22,7 +22,9 @@
   }
 
   &:hover {
-    opacity: 1;
+    span.currentExperience {
+      opacity: 1;
+    }
   }
 }
 
@@ -31,9 +33,5 @@ span.currentExperience {
   position: absolute;
   top: 12px;
   transform: translateX(-50%);
-  transition: opacity 0.3s linear;
-
-  &:hover {
-    opacity: 1;
-  }
+  transition: opacity 0.35s linear;
 }
